--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.5.1",
     "@types/nodemailer": "^6.4.9",
     "bcrypt": "^5.1.1",
@@ -27,6 +28,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "ts-node": "^10.9.1",
