--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^6.9.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "qrcode": "^1.5.3",
+    "redis": "^4.6.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "uuid": "^9.0.1",
